EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------

==02/07/2009==
cavedude00: Added faction modifiers for Berserker and Froglok.
Derision: Fixed item load failure when using MySQL 5.1.

Required SQL:
ALTER TABLE `faction_list` ADD COLUMN `mod_c16` smallint(6) NOT NULL default '0' AFTER `mod_c15`;
ALTER TABLE `faction_list` ADD COLUMN `mod_r330` smallint(6) NOT NULL default '0' AFTER `mod_r161`;

==02/05/2009==
Trevius: NPC coning is now working in SoF.
Trevuis: NPCs and Players can now be targeted in SoF.
Trevius: Corrected the illusion packet structure in SoF so helm change will work with the #fixmob command
Trevius: Adjusted the #fixmob and #race commands to allow up to 586 races (the max for SoF)
Trevius: Client Self position updates now report correct X, Y, and Heading in SoF, but still need Z corrected.
Trevius: All other position updates (NPC or other clients) now seems to be accurate.
Trevius: Names are now viewable over NPC and Player's heads
Angelox: Bots: charm level problem fixed.

==02/04/2009==
Derision: Fixed ammo consumption.

==02/02/2009==
Derision: Fix for temp merchantlists where a merchant has a single item with slotid=1

==02/01/2009==
Angelox: Bots:(leslamarch) corrected the'#bot gate [combines]' typo.
Angelox: Bots: Added '#bot dire charm'.
Angelox: Bots: Both 'charm' and 'dire charm' will now choose from three charmer classes.
Angelox: Bots: Added '#bot pet remove' (can't charm a mob while sporting a pet).
Angelox: Bots: Fixed exploit where player could remove charmed mobs at will.
Derision: Merchant lists with gaps should now not cause problems wih temporary merchant lists.
Derision: Logging to the eventlog table for trades with NPCs is now controlled by two rules rather than the loglevel variable.

Required SQL:
ALTER TABLE `eventlog` ADD `event_nid` INT NOT NULL DEFAULT '0';

Optional SQL:
INSERT INTO `rule_values` VALUES (0, 'EventLog:RecordSellToMerchant', 'false');