@@ -77,7 +77,6 @@ OP_LockoutTimerInfo=0x0000 		#SEQ 12/04/08 0x7f63 -- OP_Lockouts
 OP_TimeOfDay=0x7274 			#SEQ 12/04/08 0x0175 -- From SEQ Forums after the patch
 OP_LevelUpdate=0x1036 			#SEQ 12/04/08 0x6A99
 OP_Stamina=0x45E2 			#SEQ 12/04/08 0x82D7
-OP_RequestClientZoneChange=0x201e	#SEQ 12/04/08 0x7834 OP_ZoneChange 0x201E 0x24D8
 OP_ZoneServerReady=0x0000		#doesn't exist in Titanium 0x0000
 
 OP_ZoneInUnknown=0x0000
@@ -156,7 +155,7 @@ OP_Emote=0x13A1				#SEQ 12/04/08 0x7434 0x5F4D
 OP_SetRunMode=0x2716			# ShowEQ 10/27/05 0x4aba
 OP_BankerChange=0x72F2			#0x6a5b
 
-OP_ZoneChange=0x051B    		#OP_ZoneChange    01/17/08  0x201e 0x051B 0x24D8?
+
 OP_TargetMouse=0x4395			#SEQ 12/04/08 0x7BBB Verified I think through IDA
 OP_MobHealth=0x311A			# ShowEQ 10/27/05 0x0695 0x311A
 OP_InitialMobHealth=0x23F1		# ShowEQ 10/27/05 0x3d2d 0x23F1
@@ -166,8 +165,11 @@ OP_DeleteSpawn=0x15da			#10/07/08 0x4292 0x15da
 OP_AutoAttack=0x3427			# ShowEQ 10/27/05 0x5e55
 OP_AutoAttack2=0x6017			# ShowEQ 10/27/05 0x0701
 
-#OP_InventoryWindow=0x66C8		#New From SoF Client
+OP_RequestClientZoneChange=0x7678	#SEQ 12/04/08 0x7834 OP_ZoneChange 0x201E 0x24D8 0x7678?
+OP_ZoneChange=0x201e    		#OP_ZoneChange    01/17/08 0x051B 0x24D8 0x201e? 0x7678
 
+
+#OP_InventoryWindow=0x66C8		#New From SoF Client when inventory window is opened
 
 # Opcodes from the client that are currently Unknowns:
 # 0x5F4D - Something client sends after the emote OP is sent
@@ -180,9 +182,22 @@ OP_AutoAttack2=0x6017			# ShowEQ 10/27/05 0x0701
 # 0x58FB (size 8) - Auto-AFK after 15 minutes
 # 0x7260 (size 12) - unknown - Client crash if server sends this
 # 0x66C8 (size 4) - Appears to be an item error - Probably due to lack of item serialization
+# 0x6833 (size 4) - Sent after /zone command gives "invalid unsolicited zone request" message
+# 0x1E2C (size 152) - Sent after /goto command while having GM mode on
+# 0x1103 (size 368) - Sent after zonechange when zoning via a normal zone point
 # 0x
 # 0x
 # 0x
+# 0x
+
+# Opcodes from Client to Server that aren't verified/known
+# 0x24D8 - Thought this was requestclientzonechange, but it gives "Could not locate player with that name" each time
+# 0x7834 - Unsure about this, but it seems to cause a client crash if sent as requestclientzonechange
+# 0x7678 - Tries to zone if sent as requestclientzonechange, but gives unable to find safe coords
+# 0x051B - Client just pops back to safe coords in current zone without zoning
+# 0x
+
+
 
 OP_NewSpawn=0x581A    			#OP_NewSpawn    01/17/08 0x5C29
 
@@ -238,21 +253,21 @@ OP_GuildBank=0x0000
 OP_GuildList=0x04fb     		#ShowEQ Same as GuildsList???
 
 #GM/guide opcodes
-OP_GMServers=0x0000			#/servers 0x3387
-OP_GMBecomeNPC=0x0000			#/becomenpc 0x7864
-OP_GMZoneRequest=0x0000			#/zone 0x1306
-OP_GMSearchCorpse=0x0000		#/searchcorpse 0x3c32
-OP_GMHideMe=0x0000			#/hideme 0x15b2
-OP_GMGoto=0x0000			#/goto 0x1cee
+OP_GMServers=0x1F23			#/servers 0x3387
+OP_GMBecomeNPC=0x42FA			#/becomenpc 0x7864
+OP_GMZoneRequest=0x7678			#/zone 0x1306
+OP_GMZoneRequest2=0x6833
+OP_GMGoto=0x1E2C			#/goto 0x1cee
+OP_GMSearchCorpse=0x5F15		#/searchcorpse 0x3c32
+OP_GMHideMe=0x2E3C			#/hideme 0x15b2
 OP_GMDelCorpse=0x0000			#/delcorpse 0x0b2f
 OP_GMApproval=0x0000			#/approval 0x0c0f
-OP_GMToggle=0x0000			#/toggletell 0x7fea
-OP_GMZoneRequest2=0x0000
-OP_GMSummon=0x0000			#/summon 0x1edc
-OP_GMEmoteZone=0x0000			#/emotezone 0x39f2
-OP_GMEmoteWorld=0x0000			#/emoteworld (not implemented) 0x3383
+OP_GMToggle=0x7AB6			#/toggletell 0x7fea
+OP_GMSummon=0x3235			#/summon 0x1edc
+OP_GMEmoteZone=0x26CC			#/emotezone 0x39f2
+OP_GMEmoteWorld=0x6256			#/emoteworld (not implemented) 0x3383
 OP_GMFind=0x0000			#/find	 0x5930	
-OP_GMKick=0x0000			#/kick 0x692c
+OP_GMKick=0x7A92			#/kick 0x692c
 OP_GMNameChange=0x0000
 
 
@@ -285,7 +300,7 @@ OP_Death=0x596F				#SEQ 12/04/08 0x1B85
 #OP_RemoveSpawn=0x0000    		#SEQ 04/17/08 --NEW FROM SEQ 0x3164
 #OP_Shroud=0x7580 			#SEQ 12/04/08 --NEW FROM SEQ 0x02C4 0x53D4
 #OP_NpcMoveUpdate=0x0d11		#SEQ 10/07/08 --NEW FROM SEQ 0x22A7
-OP_SafePoint=0x0000		#
+OP_SafePoint=0x051B		#
 OP_Bind_Wound=0x0000		#0x601d
 OP_GMTraining=0x0362		#From SoF Tail
 OP_GMEndTraining=0x6768		#From SoF Tail
